<resources>
    <string name="app_name">SeeMe</string>
    <string name="action_settings">Settings</string>
    <string name="armand_gray_placeholder">Armand Gray</string>
    <string name="software_engineer_placeholder">Software Engineer</string>
    <string name="username_icon">username icon</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="launcher_icon_logo">launcher icon logo</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="already_have_account">I already have an account</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="occupation">Occupation</string>
    <string name="terms_condition">By continuing, you agree to our Terms &amp; Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="navbar_icon">navbar icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="network">Network</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="auto">Auto</string>
    <string name="main_logo_desc">Main Logo Button SeeMe</string>
    <string name="touch_to_seeme">Touch to SeeMe</string>
    <string name="wifi_icon">Wifi Icon</string>
    <string name="available_users">Available Users</string>
    <string name="current_network">Current Network</string>
    <string name="active_user_profile_picture">active user profile picture</string>
    <string name="my_account">My Account</string>
    <string name="app_info">App Info</string>
    <string name="version">Version</string>
    <string name="version_number">1.0.1 (101)</string>
    <string name="feedback">Feedback</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile_item_icon">profile item icon</string>
    <string name="please_enter_message">Please Enter Message</string>
    <string name="please_enter_text">Please Enter Text</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="action_delete">Delete</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="the_developer">The Developer</string>
    <string name="dev_mission">Dev Mission</string>
</resources>
