<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1"
    tools:context="com.armandgray.seeme.LoginActivity">

    <ImageView
        android:layout_width="@dimen/login_logo_size"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".9"
        android:contentDescription="@string/launcher_icon_logo"
        app:srcCompat="@drawable/seeme_sm_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icUsername"
            android:layout_width="@dimen/navbar_icon_size"
            android:layout_height="@dimen/navbar_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/username_icon"
            app:srcCompat="@drawable/ic_account_outline_white_48dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="18"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icPassword"
            android:layout_width="@dimen/navbar_icon_size"
            android:layout_height="@dimen/navbar_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/username_icon"
            app:srcCompat="@drawable/ic_lock_open_outline_white_48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="18"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>
