<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:showIn="@layout/fragment_profile">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/header_text_top_padding"
        android:popupBackground="#333333"
        android:text="@string/app_info"
        android:textAllCaps="true"
        android:textSize="@dimen/header_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/colorDarkGray"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_number" />

    <LinearLayout
        android:id="@+id/feedbackContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/feedback"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/navbar_icon_size"
            android:layout_weight="0.1"
            android:gravity="end"
            android:rotation="270"
            android:tint="@color/colorDarkGray"
            app:srcCompat="@drawable/ic_menu_down_white_48dp" />
    </LinearLayout>
</LinearLayout>