<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icUsername"
            android:layout_width="@dimen/navbar_icon_size"
            android:layout_height="@dimen/navbar_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/username_icon"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_account_outline_white_48dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="18"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icPassword"
            android:layout_width="@dimen/navbar_icon_size"
            android:layout_height="@dimen/navbar_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/username_icon"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_lock_open_outline_white_48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="18"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>